[package]
name = "trackloader"
version = "0.1.0"
description = "App for loading tracks from Youtube"
authors = ["Karavang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1"
whoami = "1.5.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
